fix: modify swagger annotation and public api response
